[package]
name = "venetian-blinds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hap = "^0.1.0-pre.15"
tokio = { version = "^1", features = ["full"] }
log = "^0.4.14"
env_logger = "^0.10.0"
toml = "^0.7"
serde = "^1"
serde_derive = "^1"
serial2 = "^0.2.1"
