[package]
name = "venetian-blinds"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hap = "^0.1.0-pre.15"
tokio = { version = "^1", features = ["full"] }
log = "^0.4"
env_logger = "^0.11"
toml = "^0.8"
serde = "^1"
serde_derive = "^1"
btleplug = { version = "^0.11.5", optional = true }
gethostname = {version = "^0.4.3", optional = true }
rppal = { version = "^0.18", optional = true }

[features]
default = []
hw_ble = ["btleplug"]
hw_raspi = ["rppal", "gethostname"]
